# exp-codes

./: README.md
数字图像处理/: trans.m
数据库系统/: .gitignore  README.md  数据库系统实验安排2021.doc  机试一.docx
电路基础III实验/: PLAN_A.ms14  PLAN_A.ms14 (Security copy)  PLAN_B.ms14  PLAN_B.ms14 (Security copy)  初级放大器.ms14  初级放大器.ms14 (Security copy)  合成.ms14  合成.ms14 (Security copy)  滤波器.ms14  滤波器.ms14 (Security copy)  (+1 more)
算法分析与设计/: .gitignore  CMakeLists.txt  Sort.cpp  io.cpp
算法分析与设计/OJs/: 100_OJ.cpp  10_OJ.cpp  11_OJ.cpp  11_OJ_old.cpp  12_OJ.cpp  13_OJ.cpp  14_OJ.cpp  15_OJ.cpp  16_OJ.cpp  17_OJ.cpp  18_OJ.cpp  19_OJ.cpp  1_OJ.cpp  20_OJ.cpp  21_OJ.cpp  22_OJ.cpp  23_OJ.cpp  24_OJ.cpp  25_OJ.cpp  26_OJ.cpp  27_OJ.cpp  28_OJ.cpp  29_OJ.cpp  2_OJ.cpp  30_OJ.cpp  31_OJ.cpp  32_OJ.cpp  33_OJ.cpp  34_OJ.cpp  35_OJ.cpp  36_OJ.cpp  37_OJ.cpp  38_OJ.cpp  39_OJ.cpp  3_OJ.cpp  3_OJ_old.cpp  40_OJ.cpp  41_OJ.cpp  42_OJ.cpp  43_OJ.cpp  (+62 more)
算法分析与设计/ex1/: 2019302789-梁芮槐-实验1.md  ex1.cpp
算法分析与设计/ex2/: .gitignore  2019302789-梁芮槐-实验2.md  BFS.cpp  DFS.cpp
算法分析与设计/ex3/: 2019302789-梁芮槐-实验3.md  GA.cpp
计算机图形学/: .gitignore  CMakeLists.txt
计算机图形学/docs/: cmds.txt
计算机图形学/docs/实验一/: 1-2019302789-梁芮槐.md
计算机图形学/docs/实验三/: 3-2019302789-梁芮槐.md
计算机图形学/docs/实验二/: 2-2019302789-梁芮槐.md
计算机图形学/docs/实验四/: 4-2019302789-梁芮槐.md
计算机图形学/examples/: GLDrawBasicTriDims.cpp  GLDrawCubic.cpp  OpenGLTest.cpp
计算机图形学/src/: GDIPaint.cpp  GLDraw2D.cpp  GLDraw3D.cpp  GLDrawHalfSphereLD.cpp  GLLightsToTeaPot.cpp  GLSunSystem.cpp  GLViewHalfSphereLD.cpp  GLViewTeaPot.cpp  GL_4_2.cpp  SinBall.cpp  test.cpp
软件测试/: .gitignore
(+246 files in other folders)
